public/app/css/styles.css
body { width: 100%; background: url('../images/cb-theme-1/nav-bg.png') repeat-x; font-family: 'Open Sans', sans-serif; padding-bottom: 60px; }
#page { max-width: 1100px; margin: 0 auto; text-align: left; }
header { width: 100%; text-align: left; margin: 0 20px; }
#mainHead {max-width: 1100px; margin-left: 0px; padding-left: 20px;}
#secondaryNavContainer { margin-top: 35px; margin-left:2%;}
hr { padding: 0px; margin: 10px 0; }

div#loading { margin: 20px 10px; font-size: 1.4em; }
div#loading img { height: 25px; width: 25px; }
div#errorMessage { margin-top: 50px; }
div#contentContainer { margin: 0 20px; padding: 0 15px 0 0;  }

ul#secondaryNavigation { margin-bottom: 0px; }
div#contentArea { border: solid 0px #ddd; height: auto; border-top: none; border-bottom: none; /*padding: 10px 10px 40px 10px;*/ }
.breadcrumb { margin-bottom: 0px; }
div#leftSubContentColumn { float: left; width: 750px; margin: 0; }
div#leftSubContentColumn  h3 { /* margin-bottom: 10px; */ }
div#stepInstructionMessage { font-size: 1.15em; color: #666; margin-top: 5px; }
table#recentNewHires { width: 100%; border: solid 1px #eee; border-top: none; -moz-box-shadow: 0px 5px 10px 1px #eee; -webkit-box-shadow: 0px 5px 10px 1px #eee; box-shadow: 0px 5px 10px 1px #eee; }
table#recentNewHires thead { font-weight: 700; height: 46px; line-height: 46px; background: url('../images/cb-theme-1/stripedHeader.png') repeat-x; width: 100%; font-weight: 700; font-size: 1.1em; margin-bottom: 0px; border-top: solid 4px #009933; border-bottom: none; }
table#recentNewHires tbody tr.notComplete, table#recentNewHires tbody tr td.pending { font-style: italic; }
table#recentNewHires tbody tr td.strong, table#recentNewHires tbody tr td.notComplete { font-weight: 600; }
table#recentNewHires tbody tr td { border: none; border-bottom: solid 1px #eee; padding: 10px 10px; }
div#rightSubContentColumn { float: right; width: 250px; margin: 50px  0 0; }

div#lastSavedWell { border-top: 2px solid #eee; width: 100%; margin-top: 10px; margin-bottom: 20px; }
div#lastSavedDetails { margin: 20px 0; background-color: #f4f6f7; padding: 10px 15px 15px 15px; }

div#needHelpWell { margin-top: 15px; }
footer { margin: 40px 0 0 0; height: 60px; width: 100%; line-height: 60px; background: -webkit-linear-gradient(top, #00a356, #009c50); -webkit-box-shadow: 0px 3px 10px 1px #ddd; box-shadow: 0px 3px 10px 2px #ddd; }
div#footerLinksTop { text-align: center; }
div#footerLinksTop a, #footerLinksBottom a { padding: 0 25px; color: #fff; font-weight: 700; font-size: .7em; }
ul#footerLogos { list-style-type: none; margin: 20px 0 0 40px; }
	ul#footerLogos li { display: inline; margin: 10px; }
div#footerLinksBottom { line-height: 100px; margin-right: 50px; }
div#footerLinksBottom a { color: #00a356; padding: 0 10px; font-weight: 600; }
span.grayDivider { color: #ccc; font-weight: 300; }

fieldset { margin: 20px 0; width: 100%; -moz-box-shadow: 0px 3px 10px 1px #eee; -webkit-box-shadow: 0px 3px 10px 1px #eee; box-shadow: 0px 3px 10px 1px #eee; }
fieldset legend { height: 46px; line-height: 46px; background: url('../images/cb-theme-1/stripedHeader.png') repeat-x; width: 100%; font-weight: 700; font-size: 1.2em; margin-bottom: 0px; border: solid 0px #eee; border-top: solid 4px #009933; border-bottom: none; }
fieldset > legend h4 { padding-left: 15px; }
div.legendBody { padding: 15px 15px; }
div.legendSpacer { height: 2px; border-top: solid 1px #dfdfdf; background-color: #fff }
div.legendFooter { background-color: #e2e7e8; height: 60px; line-height: 60px; padding: 0 20px;}

.wizard-step-body, .wizard-step-body-static { background-color: #f4f6f7; width: 100%; border: solid 0px #eee; border-top: none; }
.wizard-step-body > *, .wizard-step-body-static > * {  }
.wizard-thumbnail, .wizard-thumbnail-static { padding: 3px 5px 10px 15px; }
.wizard-thumbnail ul li, .wizard-thumbnail-static ul li, .four01k-summary-display .strong { font-weight: bold; color: #666; }

.wizard-step-body dl { padding-left: 20px; }
.wizard-step-body dt { font-weight: normal; }
.wizard-step-body dd { font-weight: bold; }

.summary-header-container { -moz-box-shadow: 0px 3px 10px 1px #eee; -webkit-box-shadow: 0px 3px 10px 1px #eee; box-shadow: 0px 3px 10px 1px #eee; }
.summary-header { height: 46px; line-height: 46px; background: url('../images/cb-theme-1/stripedHeader.png') repeat-x; width: 100%; font-weight: 700; font-size: 1.2em; margin-bottom: 0px; border: solid 0px #eee; border-top: solid 4px #009933; border-bottom: none; }
.summary-header h4 { padding-left: 15px; }
.summary-header div.goBackAndEditLink { padding-right: 15px; font-weight: 300; }
.summary-body { padding: 10px 20px; border: solid 1px #eee; border-top: none; background-color: #f4f6f7; }
.summary-body h5 { color: #666; font-weight: 600; }
.summary { margin-top: 20px; }
.actions { margin: 20px 0 0 0; }
.wizard-step-body .summary { background-color: #F9F9F9; border: solid 1px #DFDFDF; margin-bottom: 15px; }
.new-hire-summary { margin-top: 8px; }

/* Styles added to compliment existing twitter bootstrap styles */
.table-outlined { border: solid 1px #ddd; }
.breadcrumb li { color: #666; }
.progress-bar { border-bottom: solid 2px #eee; border-top: solid 2px #eee; padding: 25px 0 25px 0; }
.step-number, .enrolled { background-color: #F29133; border-radius: 50%; color: #FFFFFF; height: 30px; line-height: 30px; text-align: center; width: 30px; }
.step-number { float: left; }
.step-number i { display: none; }
.progress-bar .active .step-name { color: #F29133; }
.progress-bar .bar-inactive { color: #DFDFDF; }
.progress-bar .bar-inactive .step-number { background-color: #DFDFDF; }

.progress-bar .bar-success .step-number { color: #F29133; }
.progress-bar .bar-success .step-number span { display: none; }
.progress-bar .bar-success .step-number i, .enrolled i { display: block; margin: 0 auto; margin-top: 30%; }
.well-square { background-color: #f4f6f7; padding: 5px 10px 5px 10px; margin-top: 20px; }
.btn { color: #00a356; text-transform: uppercase; padding-right: 16px; padding-left: 16px; font-size: .9em; font-weight: 600; }
.btn-danger { color: #fff; }
.btn-success { background-color: #16a54a; color: #fff; }
.btn-small { font-weight: 600; font-size: .8em; }
/* OVERRIDE Bootstrap Styles for custom look */

/* from element fonts */
input, button, select, textarea { font-family: 'Open Sans', sans-serif; }

/* main navigation */
.nav-tabs { border-bottom: none }
.navbar .nav, .navbar .nav > li { float:none; display:inline-block; *display:inline; *zoom:1; vertical-align: top; text-align: left; }
.navbar .nav>li>a { font-size: 1em; text-shadow: none; }
.navbar .nav>.active>a, .navbar .nav>.active>a:hover, .navbar .nav>.active>a:focus { -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
#mainNavigation .navbar-inner { -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; border: 0; font-size: .85em; text-align: center; }
#mainNavigation .nav {float:left;}
#mainNavigation .navbar-inner {max-width: 1100px; margin-right: auto; margin-left: auto;}
/* secondary navigation */
.nav-tabs>li>a, .nav-pills>li>a { padding-left: 5px; padding-right: 5px; font-size: 1.1em; color: #555; font-weight: 600; }
.nav-tabs>.active>a, .nav-tabs>.active>a:hover, .nav-tabs>.active>a:focus { color: #16a54a; border: none; }
.nav-tabs .open .dropdown-toggle, .nav-pills .open .dropdown-toggle, .nav>li.dropdown.open.active>a:hover, .nav>li.dropdown.open.active>a:focus { background-color: #16a54a; }
ul#secondaryNavigation > li > ul { margin-top: -2px; border-top: solid 4px #00a356; background-color: #f4f6f7; }

/* breadcrumb */
.breadcrumb { background-color: #fff; padding: 0px; margin-bottom: 10px; }
.breadcrumb > li span.divider { color: #666; }

/*
.nav-tabs>li>a { border: 0; color: #fff; background-color: #838c98; height: 30px; text-transform: uppercase; font-size: .9em; padding: 20px 19.3px 8px 19.3px; }
.nav-tabs>.active>a, .nav-tabs>.active>a:hover {  color: #3f4a57; background-color: #dae0e8; }
.nav-tabs>li>a:hover { color: #fff; background-color: #3f4a57; }
.nav-tabs .open .dropdown-toggle, .nav-pills .open .dropdown-toggle, .nav>li.dropdown.open.active>a:hover, .nav>li.dropdown.open.active>a:focus { background-color: #3f4a57; color: #fff; }
*/
@media (max-width: 779px) {
	#secondaryNavContainer { margin-top: 35px; margin-left:2%;}
}
@media (min-width: 980px) and (max-width: 1087px) {
	#mainNavigation .container-fluid {padding-left:13px;padding-right: 13px;}
	#randomSpacer {width:0px !important;}
	#mainNavList li {font-size: .8em;}
}

@media (max-width: 1100px) {
	#secondaryNavContainer a { font-size: .9em; font-weight: 300;}
}

.four01k-summary-display { height: 80px; }
.four01k-summary-display span { display: inline-block; }
.four01k-summary-display .percentage { margin-left: 25px; }
.four01k-summary-display .status { padding-right: 10px; color: #F29133; font-style: italic; }
.four01k-summary-display .status, .four01k-summary-display .percentage { padding-top: 25px; }

.four01k-summary-display .enrolled { margin-right: 15px; margin-top: 20px; }
.four01k-summary-display .enrolled .icon-ok { text-indent: -9999px; }


@media (min-width: 980px) {
	#randomSpacer {width:40px;}
}

